--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1590,7 +1590,7 @@ input, select, textarea {
 					height: 2.5rem;
 					border-radius: 100%;
 					background-position: center;
-					background-image: url('../../images/bg.png');
+					background-image: url('../../images/back.png');
 					background-size: 20px 20px;
 					background-repeat: no-repeat;
 				}
