--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1165,7 +1165,7 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url('../../images/bg.png');
+			background-image: url('../../images/IMG_2340.jpeg');
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
@@ -1666,3 +1666,4 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
+
