--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -431,7 +431,7 @@ input, select, textarea {
 		}
 
 	select {
-		background-image: url('../../images/IMG_2340.jpeg');
+		background-image: url('../../images/bg.png');
 		background-size: 1.25rem;
 		background-repeat: no-repeat;
 		background-position: calc(100% - 1rem) center;
@@ -1147,12 +1147,9 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto,
- 256px 256px;
-			background-position: center,
- center;
-			background-repeat: no-repeat,
- repeat;
+			background-size: auto, 256px 256px;
+			background-position: center, center;
+			background-repeat: no-repeat, repeat;
 			z-index: 2;
 		}
 
@@ -1165,7 +1162,7 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url('../../images/IMG_2340.jpeg');
+			background-image: url('../../images/bg.png');
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
@@ -1666,4 +1663,3 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
-
